2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(drawPolyline): Implemented.

2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(drawPolygon): Implemented.

2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(hints): New field,
	(SWTGraphics2D): Initialise new field,
	(getRenderingHint): Implemented,
	(setRenderingHint): Likewise,
	(getRenderingHints): Likewise,
	(addRenderingHints): Likewise,
	(setRenderingHints): Likewise.

2007-10-23  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/AbstractRenderer.java
	(lookupSeriesPaint): Call accessor methods for per-series paint,
	(lookupSeriesFillPaint): Likewise,
	(lookupSeriesOutlinePaint): Likewise,
	(lookupSeriesStroke): Likewise,
	(lookupSeriesOutlineStroke): Likewise,
	(lookupSeriesStroke): Likewise.

2007-10-22  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/chart/swt/ChartComposite.java: 
	(chart): Made the chart field be private again,
	(ChartComposite): Refactored class, now implements PaintListener, 
	MouseListener and MouseMovedListener,
	(zoom): Fixed bug with multiple plots,
	(addChartMouseListener): Implemented,
	(removeChartMouseListener): Likewise,
	(restoreAutoDomainBounds): Fixed NPE,
	(restoreAutoRangeBounds): Likewise,
	(widgetDefaultSelected): Implemented,
	(addSWTListener): New method,
	(mouseDoubleClick): Likewise,
	(mouseDown): Likewise,
	(mouseUp): Likewise,
	(mouseMove): Likewise,
	(paintControl): Likewise,
	* source/swt/org/jfree/experimental/swt/SWTUtils.java
	(toAwtMouseEvent): changed method signature.

2007-10-22  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/swt/SWTUtils.java
	(toAwtMouseEvent): Improved mouse event conversion.
